@@ -155,7 +155,7 @@ COURIERTLS=@bindir@/couriertls
 #
 # OpenSSL:
 #
-# TLS_CIPHER_LIST="SSLv3:TLSv1:HIGH:!LOW:!MEDIUM:!EXP:!NULL:!aNULL@STRENGTH"
+# TLS_CIPHER_LIST="TLSv1:HIGH:!LOW:!MEDIUM:!EXP:!NULL:!aNULL@STRENGTH"
 #
 # GnuTLS:
 #
@@ -192,7 +192,7 @@ COURIERTLS=@bindir@/couriertls
 #
 # OpenSSL:
 #
-# TLS_CIPHER_LIST="SSLv3:TLSv1:HIGH:!LOW:!MEDIUM:!EXP:!NULL:!aNULL@STRENGTH"
+# TLS_CIPHER_LIST="TLSv1:HIGH:!LOW:!MEDIUM:!EXP:!NULL:!aNULL@STRENGTH"
 #
 #
 
